<resources>
    <string name="app_name">Malaysia Parking System</string>
    <!-- Sign In ~~ start here ~~ -->
    <string name="login_msg">Login to your account</string>
    <string name="register_msg">Create your new account</string>
    <string name="fgt_pswd_title">Forgot Password</string>
    <string name="chgn_pswd_title">Change Password</string>
    <string name="new_user_msg">New user?</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Sign Up</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="verify_btn">Verify</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_num_hint">(+60)123456789</string>
    <string name="password_hint">Password</string>
    <string name="fullname_hint">Enter your full name</string>
    <string name="dob_hint">Date of Birth (yyyy-mm-dd)</string>
    <string name="last_four_ic">Last 4 digits IC number</string>
    <string name="confirm_pswd_hint">Password Confirmation</string>
    <string name="email_hint">Enter your email</string>
    <string name="phone_helper">This phone number will be used as login credentials.</string>
    <string name="verify_msg">Please verify yourself</string>
    <string name="new_pswd_msg">Please set your new password</string>
    <!-- Sign In ~~ end here ~~ -->
    <string name="confirm_btn">Confirm</string>
    <string name="dummy_user">User Full Name</string>
    <string name="ewallet_credit">eWallet Credit:</string>
    <string name="dummy_credit">RM 0.00</string>
    <string name="reload_btn">Reload</string>
    <string name="status">Status:</string>
    <string name="dummy_status">Not Parking</string>
    <string name="time_remaining_label">Time Remaining:</string>
    <string name="time_remaining_value">null</string>
    <!-- Actions ~~ start here ~~ -->
    <string name="actions_label">Actions</string>
    <string name="find_parking_label">Find Parking</string>
    <string name="park_pay_label">Park N Pay</string>
    <string name="compound_label">Compound</string>
    <string name="season_pass_label">Season Pass</string>
    <string name="council_label">Council</string>
    <string name="vehicle_label">Vehicle</string>
    <string name="history_label">History</string>
    <string name="inbox_label">Inbox</string>
    <!-- Settings -->
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="password_setting">Password Settings</string>
    <string name="language_setting">Language Settings</string>
    <string name="app_pref">App Preferences</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="keep_logged_in">Keep Logged In</string>
    <string name="log_out">Logout</string>
    <string name="clear_cache_dialog_title">Confirm to clear cache?</string>
    <string name="clear_cache_dialog_message">By confirming to clear your cache, all your automatically saved settings will be removed completely. This will make your app slower than usual once you clear it.</string>
    <!-- States -->
    <string name="perlis">Perlis</string>
    <string name="kedah">Kedah</string>
    <string name="penang">Pinang</string>
    <string name="perak">Perak</string>
    <string name="selangor">Selangor</string>
    <!-- Council -->
    <string name="council_selected">Council Selected: </string>
    <string name="mbpp">Majlis Bandaraya Pulau Pinang</string>
    <string name="mbsp">Majlis Bandaraya Seberang Perai</string>
    <string name="ipoh">Majlis Bandaraya Ipoh</string>
    <string name="taiping">Majlis Perbandaran Taiping</string>
    <string name="manjung">Majlis Perbandaran Manjung</string>
    <string name="telukIntan">Majlis Perbandaran Teluk Intan</string>
    <string name="kualaKangsar">Majlis Perbandaran Kuala Kangsar</string>
    <string name="kampar">Majlis Daerah Kampar</string>
    <string name="gerik">Majlis Daerah Gerik</string>
    <string name="kerian">Majlis Daerah Kerian</string>
    <string name="batuGajah">Majlis Daerah Batu Gajah</string>
    <string name="perakTengah">Majlis Daerah Perak Tengah</string>
    <string name="tanjongMalim">Majlis Daerah Tanjong Malim</string>
    <string name="tapah">Majlis Daerah Tapah</string>
    <string name="selama">Majlis Daerah Selama</string>
    <string name="hulu">Majlis Daerah Pangkalan Hulu</string>
    <string name="lenggong">Majlis Daerah Lenggong</string>
    <string name="subangJaya">Majlis Bandaraya Subang Jaya</string>
    <string name="shahAlam">Majlis Bandaraya Shah Alam</string>
    <string name="petalingJaya">Majlis Bandaraya Petaling Jaya</string>
    <string name="kajang">Majlis Perbandaraya Kajang</string>
    <string name="ampangJaya">Majlis Perbandaraya Ampang Jaya</string>
    <string name="selayang">Majlis Perbandaraya Selayang</string>
    <string name="sepang">Majlis Perbandaraya Sepang</string>
    <string name="kualaSelangor">Majlis Perbandaraya Kuala Selangor</string>
    <string name="klang">Majlis Perbandaraya Klang</string>
    <string name="kualaLangat">Majlis Perbandaraya Kuala Langat</string>
    <string-array name="penang_council_array">
        <item>Majlis Bandaraya Pulau Pinang</item>
        <item>Majlis Bandaraya Seberang Perai</item>
    </string-array>
    <string-array name="perak_council_array">
        <item>Majlis Bandaraya Ipoh</item>
        <item>Majlis Perbandaran Taiping</item>
        <item>Majlis Perbandaran Manjung</item>
        <item>Majlis Perbandaran Teluk Intan</item>
        <item>Majlis Perbandaran Kuala Kangsar</item>
        <item>Majlis Daerah Kampar</item>
        <item>Majlis Daerah Gerik</item>
        <item>Majlis Daerah Kerian</item>
        <item>Majlis Daerah Batu Gajah</item>
        <item>Majlis Daerah Perak Tengah</item>
        <item>Majlis Daerah Tanjong Malim</item>
        <item>Majlis Daerah Tapah</item>
        <item>Majlis Daerah Selama</item>
        <item>Majlis Daerah Pangkalan Hulu</item>
        <item>Majlis Daerah Lenggong</item>
    </string-array>
    <string-array name="selangor_council_array">
        <item>Majlis Bandaraya Subang Jaya</item>
        <item>Majlis Bandaraya Shah Alam</item>
        <item>Majlis Bandaraya Petaling Jaya</item>
        <item>Majlis Perbandaraya Kajang</item>
        <item>Majlis Perbandaraya Ampang Jaya</item>
        <item>Majlis Perbandaraya Selayang</item>
        <item>Majlis Perbandaraya Sepang</item>
        <item>Majlis Perbandaraya Kuala Selangor</item>
        <item>Majlis Perbandaraya Klang</item>
        <item>Majlis Perbandaraya Kuala Langat</item>
    </string-array>
    <!-- others -->
    <string name="select_top_up_amount">SELECT A TOP UP AMOUNT</string>
    <string name="rm5">RM5</string>
    <string name="rm10">RM10</string>
    <string name="rm20">RM20</string>
    <string name="rm50">RM50</string>
    <string name="rm100">RM100</string>
    <string name="other_amount">Other</string>
    <string name="select_top_up_method">SELECT TOP-UP METHOD</string>
    <string name="tng_method">Touch n Go</string>
    <string name="grabpay_method">GrabPay</string>
    <string name="shopeepay_method">Shopee Pay</string>
    <string name="fpx_method">FPX</string>
    <string name="boost_method">Boost</string>
    <string name="card_method">Credit/Debit Card</string>
    <string name="top_up">Top Up Now</string>
    <string name="cancel">Cancel</string>
    <string name="list_cars">List of Cars : </string>
    <string name="create_car">Create</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="maximum_cars">Each user is allocated to a maximum of 5 cars.</string>
    <string name="car_plate_title">Enter Car Plate Number</string>
    <string name="car_color_title">Enter Car Color</string>
    <string name="car_brand_title">Enter Car Brand</string>
    <string name="car_plate_hint">eg: KSP2222</string>
    <string name="car_color_hint">eg: BLUE</string>
    <string name="car_brand_hint">eg: PERODUA</string>
    <string name="car_dialog_title">Enter Car Details</string>
    <string name="car_dialog_edit_message"></string>
    <string name="council_to_pay">Council to Pay: </string>
    <string name="selected_vehicle">Selected vehicle: </string>
    <string name="parking_duration">Parking Duration</string>
    <string name="one_day_parking">One Day</string>
    <string name="ten_hour_parking">One day parking is 10 hours per day.</string>
    <string name="or">OR</string>
    <string name="hourly">Hourly</string>
    <string name="rate_per_hour">Rate per hour = RM1.00</string>
    <string name="rate_per_30_min">Rate per 30min = RM0.50</string>
    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>
    <string name="total_duration">Total Duration: </string>
    <string name="park_pay_btn">Park Now</string>
    <string name="no_car_selected">No Car Selected</string>
    <string name="no_council_selected">No Council Selected</string>
    <string name="duration">Duration:</string>
    <string name="min_30">30 MIN</string>
    <string name="hr_1">1 HR</string>
    <string name="hr_1_min_30">1 HR 30 MIN</string>
    <string name="hr_2">2 HR</string>
    <string name="hr_2_min_30">2 HR 30 MIN</string>
    <string name="hr_3">3 HR</string>
    <string name="hr_3_min_30">3 HR 30 MIN</string>
    <string name="hr_4">4 HR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>